force-app/main/default/objects/ssot__CodeSetBundle__dlm/ssot__CodeSetBundle__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Healthcare Code Set Config</referenceEntityGroup>
        <referenceEntityName>CodeSetBundle</referenceEntityName>
        <referenceEntitySubjectArea>Health Code Set</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>