force-app/main/default/objects/ssot__CodeSetBundle__dlm/fields/ssot__CodeSet10Id__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeSet10Id__c</fullName>
    <label>Code Set 10</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeSet10Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>