force-app/main/default/objects/ssot__CodeSetBundle__dlm/fields/ssot__CodeSetBundleKeyText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeSetBundleKeyText__c</fullName>
    <label>Code Set Bundle Key</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeSetBundleKeyText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>