force-app/main/default/objects/ssot__CodeSetBundle__dlm/fields/ssot__CodeSetBundleType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeSetBundleType__c</fullName>
    <label>Code Set Bundle Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeSetBundleType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>