force-app/main/default/objects/ssot__CodeSetBundle__dlm/fields/ssot__rel_1716576875259_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716576875259_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CodeSetBundle_CodeSet1Id_map_CodeSet_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>CodeSetBundle_CodeSet1Id_map_CodeSet_rel</relationshipLabel>
    <relationshipName>rel_1716576875259_end</relationshipName>
    <type>Lookup</type>
</CustomField>