force-app/main/default/objects/ssot__CodeSetBundle__dlm/fields/ssot__rel_1716576876230_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716576876230_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CodeSetBundle_CodeSet11Id_map_CodeSe_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>CodeSetBundle_CodeSet11Id_map_CodeSe_rel</relationshipLabel>
    <relationshipName>rel_1716576876230_end</relationshipName>
    <type>Lookup</type>
</CustomField>